# STOCK_TERMINAL

./: .gitignore  README.md  data.json  main.py  pyproject.toml  requirements.txt
src/: main.py
src/stock_terminal/: __init__.py  app.py  indicators.py  plotting.py
stock_terminal/: app.py  constants.py  log.py  models.py
